# LdapStudio

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release.sh
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
app/src/api/: commands.ts
app/src/components/: CompareSchemaView.tsx  ConnectionDialog.tsx  CsvExportDialog.tsx  DitTree.tsx  DnPickerButton.tsx  EntryDetails.tsx  FilterInput.tsx  HelpModal.tsx  LdapIcon.tsx  LdifDialog.tsx  LogPanel.tsx  NewEntryDrawer.tsx  RenameEntryModal.tsx  SchemaBrowser.tsx  SchemaEditor.tsx  SearchView.tsx  ShortcutsModal.tsx  Toolbar.tsx  UndoHistoryDrawer.tsx
app/src/store/: appStore.ts
app/src/utils/: ldapPassword.ts  schema.ts  useKeyboardShortcuts.ts
crates/ldap-core/: Cargo.toml
crates/ldap-core/src/: client.rs  ldif.rs  lib.rs  schema.rs  types.rs
