[package]
name    = "ldap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ldap3   = { version = "0.11", default-features = false, features = ["tls-rustls"] }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid    = { version = "1", features = ["v4"] }
tracing = "0.1"
regex   = { version = "1", default-features = false, features = ["std"] }

